Modify access rules

--- a/project.config
+++ b/project.config
@@ -6,12 +6,18 @@
 [access "refs/*"]
 	owner = group user/svonidze
 [access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group shlang-dev
 	label-Code-Review = -2..+2 group user/svonidze
 	label-Verified = -1..+1 group user/svonidze
+	push = group shlang-dev
 	push = group user/svonidze
+	read = group shlang-dev
 	read = group user/svonidze
+	rebase = group shlang-dev
 	rebase = group user/svonidze
+	removeReviewer = group shlang-dev
 	removeReviewer = group user/svonidze
+	submit = group shlang-dev
 	submit = group user/svonidze
 [access "refs/heads/*"]
 	create = group user/svonidze
